# advent-of-code-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md  _template.rs
2015/: Cargo.toml
2015/benches/: all.rs
2015/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  lib.rs
2019/: Cargo.toml
2019/day-01-the-tyranny-of-the-rocket-equation/: Cargo.toml
2019/day-02-1202-program-alarm/: Cargo.toml
2019/day-05-sunny-with-a-chance-of-asteroids/: Cargo.toml
2019/day-07-amplification-circuit/: Cargo.toml
2019/day-09-sensor-boost/: Cargo.toml
2019/day-11-space-police/: Cargo.toml
2019/day-13-care-package/: Cargo.toml
2019/intcode/: Cargo.toml
2021/: Cargo.toml
2021/assets/: 21.txt
2021/benches/: all.rs
2021/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  lib.rs
2022/: Cargo.toml  rust-toolchain.toml
2022/day-01-calorie-counting/: Cargo.toml
2022/day-02-rock-paper-scissors/: Cargo.toml
2022/template/: Cargo.toml
2022/utils/: Cargo.toml
2023/days/05-if-you-give-a-seed-a-fertilizer/: Cargo.toml
2023/days/05-if-you-give-a-seed-a-fertilizer/benches/: benchmarks.rs  solution.rs
2023/days/05-if-you-give-a-seed-a-fertilizer/src/: lib.rs
2023/days/12-hot-springs/: Cargo.toml
2023/days/12-hot-springs/benches/: benchmarks.rs  solution.rs
2023/days/12-hot-springs/src/: lib.rs
2023/days/17-clumsy-crucible/: Cargo.toml
2023/days/17-clumsy-crucible/benches/: benchmarks.rs
2023/days/17-clumsy-crucible/src/: lib.rs
2023/days/20-pulse-propagation/: Cargo.toml
2023/days/20-pulse-propagation/benches/: benchmarks.rs
2023/days/20-pulse-propagation/src/: lib.rs
2023/days/23-a-long-walk/: Cargo.toml
2023/days/23-a-long-walk/benches/: benchmarks.rs
2023/days/23-a-long-walk/src/: lib.rs
2023/utils/: Cargo.toml
2024/: Cargo.toml
2025/: Cargo.toml
2025/days/01-secret-entrance/: Cargo.toml
2025/days/01-secret-entrance/benches/: benchmarks.rs
2025/days/01-secret-entrance/inputs/: personal.txt
2025/days/01-secret-entrance/src/: lib.rs
2025/days/02-gift-shop/: Cargo.toml
2025/days/02-gift-shop/benches/: benchmarks.rs
2025/days/02-gift-shop/src/: lib.rs
2025/days/03-lobby/: Cargo.toml
2025/days/03-lobby/benches/: benchmarks.rs
2025/days/03-lobby/src/: lib.rs
2025/days/04-printing-department/: Cargo.toml
2025/days/04-printing-department/benches/: benchmarks.rs
2025/days/04-printing-department/src/: lib.rs
2025/days/05-cafeteria/: Cargo.toml
2025/days/05-cafeteria/benches/: benchmarks.rs
2025/days/05-cafeteria/src/: lib.rs
2025/days/06-trash-compactor/: Cargo.toml
2025/days/06-trash-compactor/benches/: benchmarks.rs
2025/days/06-trash-compactor/inputs/: personal.txt
2025/days/06-trash-compactor/src/: lib.rs
2025/days/07-laboratories/: Cargo.toml
2025/days/07-laboratories/benches/: benchmarks.rs
2025/days/07-laboratories/inputs/: personal.txt
2025/days/07-laboratories/src/: lib.rs
2025/days/08-playground/: Cargo.toml
2025/days/08-playground/benches/: benchmarks.rs
2025/days/08-playground/inputs/: personal.txt
2025/days/08-playground/src/: lib.rs
2025/utils/: Cargo.toml
2025/utils/src/: range_set.rs  trim.rs
assets/2021/: input_18.txt
benches/: y2015.rs  y2021.rs
src/: _template.rs  lib.rs  main.rs
src/y2015/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  mod.rs
src/y2021/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  mod.rs
template/: Cargo.toml
(+158 files in other folders)
