[package]
name = "aoc"
version = "1.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
md5 = "0.7.0"
itertools = "0.10"
hashbrown = "0.11"

[profile.test]
opt-level = 3

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "y2021"
harness = false