[workspace]

members = ["days/*", "utils"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
rstest = "0.26.1"
criterion = { version = "0.8.0", default-features = false }

[profile.bench]
# opt-level = 1 # can help getting more debug information in a trace
# debug = true
