[package]
name = "day-05-if-you-give-a-seed-a-fertilizer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aoc-utils = { path = "../../utils" }

[dev-dependencies]
rstest.workspace = true
criterion.workspace = true

[[bench]]
name = "benchmarks"
harness = false
