[package]
name = "day-17-clumsy-crucible"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aoc-utils = { path = "../../utils" }
pathfinding = "4.6"

[dev-dependencies]
rstest.workspace = true
criterion.workspace = true

[[bench]]
name = "benchmarks"
harness = false
