[package]
name = "day-23-a-long-walk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aoc-utils = { path = "../../utils" }
pathfinding = "4.8"

[dev-dependencies]
rstest.workspace = true
criterion.workspace = true

[[bench]]
name = "benchmarks"
harness = false
