[package]
name = "day-05-cafeteria"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aoc-utils = { path = "../../utils" }
atoi_simd = "0.17.0"

[dev-dependencies]
rstest.workspace = true
criterion.workspace = true

[[bench]]
name = "benchmarks"
harness = false
