[package]
name = "day-08-playground"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aoc-utils = { path = "../../utils" }
itertools = "0.14.0"
atoi_simd = "0.17.0"

[dev-dependencies]
rstest.workspace = true
criterion.workspace = true

[[bench]]
name = "benchmarks"
harness = false
